--- a/src/styles/components/_main-page.scss
+++ b/src/styles/components/_main-page.scss
@@ -1,6 +1,6 @@
 .main-page {
   &__wrapper {
-    height: 100%;
+    min-height: 100vh;
     background-image: url("../assets/images/bg-mb@1x.jpg");
     background-size: cover;
     background-position: 0 0;
